Page MenuHome GnuPG

gpg-mail-tube,gpg-wks-server: Allow the use of templates instead of static texts.
Testing, NormalPublic

Description

Right now we have a few fixed string ("Please find attached a PGP encrypted file") which should better be taken from a template file so that users can configure them as needed. Maybe with sections and variables to allow for different languages..

Obviously we also need to implement QP-encoding so that UTF-8 can be used. Or should we rely on 8-bit cleanness?

Event Timeline

werner triaged this task as Normal priority.Nov 8 2024, 11:10 AM
werner created this task.
werner created this object with edit policy "Contributor (Project)".
werner changed the task status from Open to Testing.May 30 2025, 2:56 PM
werner moved this task from Backlog to QA on the gnupg26 board.

Alright. We use utf-8 in our template files and switch to QP encoding when needed.

Test procedure:

cat sample.eml | LC_ALL=de_DE.utf8  gpg-mail-tube -va foo@example.org >x

and check that x is as expected. Use a custom file in /etc/gnupg/mail-tube.de.txt to test that this template is used instead of the installed one.

Better text for the standard templates are welcome. A French version would also be appreciated.

werner renamed this task from gpg-mail-tube: Allow the use of templates instead of static texts. to gpg-mail-tube,gpg-wks-server: Allow the use of templates instead of static texts..Jun 2 2025, 12:37 PM
werner updated the task description. (Show Details)

We do this now also for gpg-wks-server. Further gpg-wks-client now sends the current language to the server so that the server can get back to the user with a proper translated text (if configured).